rspec-tools/tests/resources/invalid-asciidoc/wrong_constrained_passthrough.adoc
Constrained pass-through are broken by backquotes: `+`+`